src/components/web/sass/_chatBubble.scss
$receiverBubbleColor: #dfe9ef;
$receiverTextColor: #555;

$senderBubbleColor: #d00d2d;
$senderTextColor: #eee;

@import "./mixins/_transforms";

.bubble-container {
  display: flex;
    align-items: center;
    justify-content: flex-end;
  font-family: sans-serif;
  font-size: 14px;
  margin-top: 8px;
  margin-bottom: 8px;
}

.bubble-container--right {
  margin-right: 8px;
}

.bubble-container--left {
  margin-left: 8px;
}

.bubble {
  background-color: #f2f2f2;
  border-radius: 5px;
  box-shadow: 0 0 6px #b2b2b2;
  color: white;
  display: block;
  margin: 0; // Removes default margins on anything .bubble is applied to; use margin utility instead
  padding: 10px 18px;
  position: relative;
  vertical-align: top;
  word-wrap: break-word;
}

.bubble::before {
  background-color: #f2f2f2;
  content: "\00a0";
  display: block;
  height: 16px;
  position: absolute;
    top: 11px;
  width: 20px;
  @include transform(29deg, -35deg);
}

.receiver {
  background-color: $receiverBubbleColor;
  color: $receiverTextColor;
  margin-left: 18px;
  margin-right: 60px;
}

.receiver::before {
  background-color: $receiverBubbleColor;
  box-shadow: -2px 2px 2px 0 rgba(178, 178, 178, 0.4);
  left: -9px;
}

.sender {
  background-color: $senderBubbleColor;
  color: $senderTextColor;
  margin-left: 60px;
  margin-right: 18px;
}

.sender::before {
  background-color: $senderBubbleColor;
  box-shadow: 2px -2px 2px 0 rgba(178, 178, 178, 0.4);
  right: -9px;
}

.timeStamp {
  font-size: 10px;
}

